# cratebot

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
deploy/: checkout  cratebot.service  setup
src/: main.rs
