[package]
name = "cratebot"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
crates_io_api = "0.8.0"
egg-mode = "0.16.0"
env_logger = "0.9.0"
envy = "0.4.2"
log = "0.4.17"
rand = "0.8.5"
serde = "1.0.144"
sqlite = "0.27.0"
tokio = { version = "1.20.1", features = ["rt", "macros"] }
